...

            Button(action: addToBlocked) {
                Label("Block", systemImage: "hand.raised.fill")
            }

            Button(action: addToAllowed) {
                Label("Allow", systemImage: "arrow.right.circle.fill")
            }
        }
    }
}

